ref: change to PirateGroup Model

--- a/UIKitSample/Base.lproj/Main.storyboard
+++ b/UIKitSample/Base.lproj/Main.storyboard
@@ -16,18 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="LSM-hQ-eio">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="AHd-oI-m5N">
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Pirate" textLabel="bJW-4V-uTI" style="IBUITableViewCellStyleDefault" id="eTB-V6-ulf">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Pirate" textLabel="Pad-MD-Xgd" style="IBUITableViewCellStyleDefault" id="AMo-z7-ibl">
                                         <rect key="frame" x="0.0" y="55.333332061767578" width="393" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eTB-V6-ulf" id="RLC-A3-jUU">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AMo-z7-ibl" id="6u0-DL-sWc">
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bJW-4V-uTI">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Pad-MD-Xgd">
                                                     <rect key="frame" x="20" y="0.0" width="353" height="43.666667938232422"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
@@ -44,14 +44,14 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LSM-hQ-eio" secondAttribute="trailing" id="BPp-nP-x0z"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LSM-hQ-eio" secondAttribute="bottom" id="Y77-cS-94F"/>
-                            <constraint firstItem="LSM-hQ-eio" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iqC-Fq-Ow8"/>
-                            <constraint firstItem="LSM-hQ-eio" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="w7m-J2-nHj"/>
+                            <constraint firstItem="AHd-oI-m5N" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="IPA-id-oE1"/>
+                            <constraint firstItem="AHd-oI-m5N" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QXo-21-N3c"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="AHd-oI-m5N" secondAttribute="bottom" id="rqQ-cS-Stm"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AHd-oI-m5N" secondAttribute="trailing" id="yta-5P-PC2"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="tableView" destination="LSM-hQ-eio" id="FTx-UY-Fdw"/>
+                        <outlet property="tableView" destination="AHd-oI-m5N" id="URj-yk-xhf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
